--- a/Works/index.html
+++ b/Works/index.html
@@ -86,7 +86,7 @@
                                 2024/07/15 幺樂団カァニバル!13<br>
                                 A4(横)<br>
                                 <br>
-                                蓬莱ミリしらから一カ月で描き上げた、暗く不気味な不思議なイラスト集<br>
+                                蓬莱ミリしらから一カ月で描き上げた、暗く不気味で不思議なイラスト集<br>
                                 <a href="https://ru-snrg.booth.pm/items/5925014">Booth</a>
                             </p>
                         </div>
@@ -99,7 +99,7 @@
                                 2024/06/01 夢の世紀　魅知の旅　再訪（遠野秘封）<br>
                                 A6 小説<br>
                                 <br>
-                                七夕坂夢幻能に対するアンチテーゼ<br>
+                                それは七夕坂夢幻能に対するアンチテーゼ<br>
                                 <a href="https://ru-snrg.booth.pm/items/5799389">Booth</a>
                             </p>
                         </div>
