--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <h1>What's New</h1>
                         <div class="whats-new-content">
                             <!-- 上から情報を追加する -->
-                            <p>2024/11/xx HP大幅更新</p>
+                            <p>2024/11/17 HP大幅更新</p>
                             <p>2024/07/20 End of My Lilith　HPオープン</p>
                             
                         </div>
@@ -58,7 +58,7 @@
                             <p><a href="Blog/index.html">Blog</a></p>
                             <p><a href="NF13.html">Game(準備中)</a></p>
                             <p><a href="NF13.html">Music(準備中)</a></p>
-                            <p><a href="/NF13.html">Cosplay(準備中)</a></p>
+                            <p><a href="NF13.html">Cosplay(準備中)</a></p>
                             <!-- ここにさらに多くのコンテンツを追加できます -->
                         </div>
                     </div>
