--- a/About/index.html
+++ b/About/index.html
@@ -33,14 +33,14 @@
             <div class="about">
                 <div class="about_text">
                     <h1>About "End of My Lilith"</h1>
-                    <p>れうすずらぎによる個人サークルです。</p>
-                    <p>主に東方Projectの二次創作を行っています。</p>
-                    <p>小説、漫画、イラスト、ゲーム、コスプレと、何でもやります。</p>
+                    <p>　れうすずらぎによる個人サークルです。</p>
+                    <p>　主に東方Projectの二次創作を行っています。</p>
+                    <p>　小説、漫画、イラスト、ゲーム、コスプレ写真、衣装と、何でも作ります。</p>
 
                     <h1>About "れう すずらぎ"</h1>
-                    <p>2024年3月まで大学で相対性精神学の研究をしていました。嘘です。でも精神病の研究してたのは本当なので、誰よりもマエリベリー・ハーンに近い存在だったと思います。</p>
-                    <p>その後はしっかりと社会に出てしまいました。もう私はマエリベリーになれない。</p>
-                    <p>好きなものは剛欲異聞、秘封、蓬莱人形です。</p>
+                    <p>　2024年3月まで大学で相対性精神学の研究をしていました。嘘です。でも精神病の研究してたのは本当なので、誰よりもマエリベリー・ハーンに近かったと思います。</p>
+                    <p>　その後はしっかりと社会に出てしまいました。もう私はマエリベリーになれない。</p>
+                    <p>　好きなものは剛欲異聞、秘封、蓬莱人形です。</p>
                 </div>
                 <div class="about_img">
                     <img src="images/About.png" alt="about img">
