--- a/html_source/content-links.html
+++ b/html_source/content-links.html
@@ -2,7 +2,7 @@
     <a href="About/index.html" class="content-item">About</a>
     <a href="Works/index.html" class="content-item">Works</a>
     <a href="Blog/index.html" class="content-item">Blog</a>
-    <a href="/End-of-My-Lilith/NF13.html" class="content-item">Game</a>
-    <a href="/End-of-My-Lilith/NF13.html" class="content-item">Music</a>
-    <a href="/End-of-My-Lilith/NF13.html" class="content-item">Cosplay</a>
+    <a href="NF13.html" class="content-item">Game</a>
+    <a href="NF13.html" class="content-item">Music</a>
+    <a href="NF13.html" class="content-item">Cosplay</a>
 </div>
