--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                         <h1>Information</h1>
                         <div class="info-content">
                             <!-- 上から情報を追加する -->
+                            <p>・C105　二日目　東6ホール　ツ-25aにスペースいただいております</p>
                             <p>・C105当選しました</p>
                             <p>・第十一回博麗神社秋季例大祭に申し込みました</p>
                             <p>・第二十回東方紅楼夢に申し込みました</p>
