--- a/Cosplay/index.html
+++ b/Cosplay/index.html
@@ -26,7 +26,7 @@
         <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
         <script src="./script.js"></script>
         <!--以下写真のサムネイル配置、拡大表示のためのスクリプト（Cosようのjsとlightbox2とjquery）-->
-        <script src="/Cosplay/Cos_Script.js"></script>
+        <script src="./Cosplay/Cos_Script.js"></script>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
         <script src="https://code.jquery.com/jquery-1.12.4.min.js" type="text/javascript"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js" type="text/javascript"></script>
