--- a/Cosplay/index.html
+++ b/Cosplay/index.html
@@ -35,12 +35,8 @@
         <div id="container">
             <div class="slider-placeholder"></div>
             <div class="contentlink-placeholder"></div>
-            今のところ掲載写真は全て自撮りです
+            <div class="Cos_text"><span>今のところ、掲載写真は全て自撮りです。</span></div>
             <div class="Cosplay">
-            <!--https://allabout.co.jp/gm/gc/23975/
-            https://qiita.com/tomo-ka/items/450b6cf6f8b9ae213feb
-            参考にはなる？gridを使っていきたい。というかやっぱり頑張ってChatGPTに書かせるか
-            -->
             </div>
             
         </div>  
