--- a/html_source/content-links.html
+++ b/html_source/content-links.html
@@ -4,5 +4,5 @@
     <a href="Blog/index.html" class="content-item">Blog</a>
     <a href="NF13.html" class="content-item">Game</a>
     <a href="NF13.html" class="content-item">Music</a>
-    <a href="NF13.html" class="content-item">Cosplay</a>
+    <a href="Cosplay/index.html" class="content-item">Cosplay</a>
 </div>
