--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                         <h1>What's New</h1>
                         <div class="whats-new-content">
                             <!-- 上から情報を追加する -->
+                            <p>2024/12/31 コスプレページ更新</p>
                             <p>2024/11/17 HP大幅更新</p>
                             <p>2024/07/20 End of My Lilith　HPオープン</p>
                             
@@ -59,8 +60,8 @@
                             <p><a href="Blog/index.html">Blog</a></p>
                             <p><a href="NF13.html">Game(準備中)</a></p>
                             <p><a href="NF13.html">Music(準備中)</a></p>
-                            <p><a href="NF13.html">Cosplay(準備中)</a></p>
-                            <!-- ここにさらに多くのコンテンツを追加できます -->
+                            <p><a href="Cosplay/index.html">Cosplay(準備中)</a></p>
+                            <!-- こことhtml_sourceのcontent-linkを修正 -->
                         </div>
                     </div>
                 </div>
